feat(node): Adds additional field to node status (#66)
* feat(node): Adds additional field to node status

Similar to container statuses

* Rename protobuf messages

- Rename some protobuf messages by removing the service name from the
  operation. For example `UpdateContainerRequests` becomes
  `UpdateRequest`. This is mainly to satisfy the linter.
- Adds `Version()` to the runtime interface
- Fixes to hack scipts to improve local testing
- Adds `buf.work.yaml` to the project root and moved `buf.yaml` to `api/`

* Rename proto messages and services

- Respect mr linter

* Make linter happy

0 issues

* Update github runners to ubuntu-24.04
