# api/services/nodes/v1/nodes.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "api/services/nodes/v1/nodes.proto",
+    "title": "services/nodes/v1/nodes.proto",
     "version": "version not set"
   },
   "tags": [
@@ -23,7 +23,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1ListNodeResponse"
+              "$ref": "#/definitions/servicesnodesv1ListResponse"
             }
           },
           "default": {
@@ -52,7 +52,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1CreateNodeResponse"
+              "$ref": "#/definitions/servicesnodesv1CreateResponse"
             }
           },
           "default": {
@@ -84,7 +84,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1GetNodeResponse"
+              "$ref": "#/definitions/servicesnodesv1GetResponse"
             }
           },
           "default": {
@@ -112,7 +112,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1DeleteNodeResponse"
+              "$ref": "#/definitions/servicesnodesv1DeleteResponse"
             }
           },
           "default": {
@@ -135,6 +135,66 @@
         ]
       }
     },
+    "/api/v1/nodes/{id}/status": {
+      "put": {
+        "operationId": "NodeService_UpdateStatus",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1UpdateStatusResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "updateMask",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status.phase",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status.ip.dns",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status.hostname",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status.runtime",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "NodeService"
+        ]
+      }
+    },
     "/api/v1/nodes/{node.meta.name}": {
       "put": {
         "operationId": "NodeService_Update",
@@ -142,7 +202,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1UpdateNodeResponse"
+              "$ref": "#/definitions/v1UpdateResponse"
             }
           },
           "default": {
@@ -218,7 +278,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1UpdateNodeResponse"
+              "$ref": "#/definitions/v1UpdateResponse"
             }
           },
           "default": {
@@ -319,7 +379,16 @@
     "nodesv1Status": {
       "type": "object",
       "properties": {
-        "state": {
+        "phase": {
+          "type": "string"
+        },
+        "ip": {
+          "$ref": "#/definitions/v1IPStatus"
+        },
+        "hostname": {
+          "type": "string"
+        },
+        "runtime": {
           "type": "string"
         }
       }
@@ -335,7 +404,7 @@
       "additionalProperties": {},
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
-    "v1CreateNodeResponse": {
+    "servicesnodesv1CreateResponse": {
       "type": "object",
       "properties": {
         "node": {
@@ -343,11 +412,31 @@
         }
       }
     },
-    "v1DeleteNodeResponse": {
+    "servicesnodesv1DeleteResponse": {
       "type": "object",
       "properties": {
         "id": {
           "type": "string"
+        }
+      }
+    },
+    "servicesnodesv1GetResponse": {
+      "type": "object",
+      "properties": {
+        "node": {
+          "$ref": "#/definitions/v1Node"
+        }
+      }
+    },
+    "servicesnodesv1ListResponse": {
+      "type": "object",
+      "properties": {
+        "nodes": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1Node"
+          }
         }
       }
     },
@@ -409,11 +498,56 @@
         }
       }
     },
-    "v1GetNodeResponse": {
+    "v1IPLinkStatus": {
       "type": "object",
       "properties": {
-        "node": {
-          "$ref": "#/definitions/v1Node"
+        "link": {
+          "type": "string"
+        },
+        "state": {
+          "type": "string"
+        },
+        "mac": {
+          "type": "string"
+        }
+      }
+    },
+    "v1IPStatus": {
+      "type": "object",
+      "properties": {
+        "links": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1IPLinkStatus"
+          }
+        },
+        "addresses": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1IPV4Status"
+          }
+        },
+        "dns": {
+          "type": "string"
+        }
+      }
+    },
+    "v1IPV4Status": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string"
+        },
+        "netmask": {
+          "type": "string"
+        },
+        "gateway": {
+          "type": "string"
+        },
+        "interface": {
+          "type": "string"
         }
       }
     },
@@ -422,18 +556,6 @@
       "properties": {
         "id": {
           "type": "string"
-        }
-      }
-    },
-    "v1ListNodeResponse": {
-      "type": "object",
-      "properties": {
-        "nodes": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1Node"
-          }
         }
       }
     },
@@ -474,11 +596,19 @@
         }
       }
     },
-    "v1UpdateNodeResponse": {
+    "v1UpdateResponse": {
       "type": "object",
       "properties": {
         "node": {
           "$ref": "#/definitions/v1Node"
+        }
+      }
+    },
+    "v1UpdateStatusResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
         }
       }
     }
